# Shop_project_Django

./: .gitignore  README.md  fixture.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  service.py  urls.py  views.py
catalog/management/commands/: delete_data.py  load_category.py  load_product.py
catalog/migrations/: 0001_initial.py  0002_rename_category_id_product_category.py  0003_product_price.py  0004_contact.py  0005_blog.py  0006_alter_blog_slug.py  0007_version.py  0008_alter_version_number.py  0009_product_author.py  0010_delete_blog.py  0011_product_is_published.py  0012_alter_product_options.py
catalog/static/css/: bootstrap.min.css
catalog/templates/catalog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  contact.html  home_list.html  home_page.html  product.html  product_confirm_delete.html  (+6 more)
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_verify_code.py  0003_alter_user_verify_code.py  0004_alter_user_verify_code.py  0005_alter_user_verify_code.py  0006_alter_user_verify_code.py  0007_alter_user_verify_code.py  0008_alter_user_verify_code.py  0009_alter_user_verify_code.py  0010_alter_user_verify_code.py  0011_alter_user_verify_code.py  0012_alter_user_verify_code.py  0013_alter_user_verify_code.py
(+7 files in other folders)
