[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Saveliy <ya.savchik2000@mail.ru>"]
readme = "README.md"
packages = [{include = "django_project"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"
ipython = "^8.16.1"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
